localhost/components/argo/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`argo.<LOCAL_DNS>`)
    services:
    - name: argo
      port: 80
  tls:
    secretName: argo-tls
---
# todo: technical debt: https://github.com/kubefirst/kubefirst/issues/941
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  name: redirect-to-https
#  namespace: argo
#spec:
#  redirectScheme:
#    scheme: https
#    permanent: true
